tests/test_files/valid_files_sintatic/break.c
int main() {
    while (1) {
        break;  // agora está dentro de um laço
    }
    return 0;
}
