tests/test_files/invalid_files_semantic/break_outside.c
int main() {
    break;     // âŒ sem loop englobando
    return 0;
}
